util: Added ConsoleHandler to separate logging for stdout/stderr
Also refactored LogFileHandler and added tests.